-
Type:
Bug
-
Status: Closed
-
Priority:
Trivial
-
Resolution: Fixed
-
Affects Version/s: None
-
Fix Version/s: 0.10.0
-
Component/s: Go - Compiler
-
Labels:None
-
Patch Info:Patch Available
src/generate/t_go_generator.cc: In member function 'std::string t_go_generator::type_name(t_type*)': src/generate/t_go_generator.cc:3447:14: warning: unused variable 'program' [-Wunused-variable] t_program* program = ttype->get_program(); ^