THRIFT-3488 warning: unused variable 'program' Client: Go Patch: Jens Geyer